Bug 95854 - Insert comment shortcut doesn't let me edit existing comment
Summary: Insert comment shortcut doesn't let me edit existing comment
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.0.0.5 release
Hardware: All All
: high normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.0.0
Keywords: bibisectNotNeeded, needsUXEval, regression
: 97738 103084 (view as bug list)
Depends on:
Blocks: UNO-Command-New Shortcuts-Accelerators Calc-Comments
  Show dependency treegraph
 
Reported: 2015-11-16 12:26 UTC by web_libreoffice
Modified: 2022-04-21 04:34 UTC (History)
14 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description web_libreoffice 2015-11-16 12:26:44 UTC
"Insert comment" in previous versions either created comment in cell, or entered edit mode for existing comment. Now this is no longer the case - "Insert comment" only inserts new one, and to edit existing comment, I have to use "Edit comment" from mouse-context menu.

The problem is that "Edit comment" is not available anywhere as keyboard shortcut, and having to use different thing for inserting new comment, or editing existing one is problematic.
Comment 1 Buovjaga 2015-11-16 18:17:24 UTC
But you can create your own keyboard shortcut.

Tools - Customize - Keyboard - Functions category: Insert. Select "Edit comment", select some shortcut in the top list and click Modify to associate Edit comment with it.

Is this enough for you?

Set to NEEDINFO.
Change back to UNCONFIRMED, if it's not enough. Change to RESOLVED WORKSFORME, if you think it's ok.
Comment 2 web_libreoffice 2015-11-16 19:42:15 UTC
There is no "Edit comment" in there. Functions are ... "Define Name", and immediately after: "Floating Frame". Nothing starting with E.
Comment 3 web_libreoffice 2015-11-16 19:43:01 UTC
Also, "But you can create your own keyboard shortcut." - besides the point that I can't, why did we lose the ability to have *single* keyboard combination/functionality that lets me insert comment or edit existing one?
Comment 4 Buovjaga 2015-11-16 20:07:07 UTC
Whoops, sorry, I was looking at 5.1 for some reason.
You are right that it can't be defined in 5.0, strange.

For your question in comment 3, we have to ask UX.
Comment 5 Jean-Baptiste Faure 2016-01-09 17:45:46 UTC
(In reply to web_libreoffice from comment #3)
> Also, "But you can create your own keyboard shortcut." - besides the point
> that I can't, why did we lose the ability to have *single* keyboard
> combination/functionality that lets me insert comment or edit existing one?

Indeed. For me the removal of this ability is a bug or a design error, because you can't create a second comment if there is already one. So if a comment exists, the only actions you can take is edit or remove the comment. As it is not always obvious that a comment has already been defined, it is a good idea to have the same shortcut to create and edit a comment.

Setting status to NEW even if the possibility to create a shortcut for the edit comment exists in version 5.1. I think the bug should be fixed for the 5.0 branch. It is an accessibility problem too because it is not possible to edit a comment without the mouse.

In the case of 5.1 and next, a shortcut for the edit comment command should be defined by default. For example ctrl+shift+C but it would be better if we had the same shortcut to edit and create a comment.
The mnemonics to create and edit a comment are the same: right click + M (shift+F10+M).

Best regards. JBF
Comment 6 Robinson Tryon (qubit) 2016-08-25 05:39:06 UTC Comment hidden (obsolete)
Comment 7 Buovjaga 2016-11-29 18:31:17 UTC
*** Bug 97738 has been marked as a duplicate of this bug. ***
Comment 8 Buovjaga 2016-11-29 18:31:25 UTC
*** Bug 103084 has been marked as a duplicate of this bug. ***
Comment 9 Yousuf Philips (jay) (retired) 2016-11-30 22:42:42 UTC
The same shortcut should work for both inserting and editing comments, as it used to in 4.4 and below, and as it does in writer, so users dont have to learn a new shortcut.

https://gerrit.libreoffice.org/#/c/31449/
Comment 10 Xisco Faulí 2017-09-11 08:32:56 UTC Comment hidden (obsolete)
Comment 11 QA Administrators 2018-09-12 02:38:14 UTC Comment hidden (obsolete)
Comment 12 Stanislav Horacek 2018-09-12 21:11:54 UTC
It is still not possible to use the same command for inserting and editing comments.

Tested in master:
Version: 6.2.0.0.alpha0+
Build ID: c4fb70d1f70209e31936b9c488a044087f11c303
Comment 13 Timur 2020-03-10 07:30:47 UTC
There are multiple problems here:
1. Insert-Comment is not available in menu if comment exists, so Edit not possible from menu (regression from Bug 84153 in LO 5.0);
2. Ctrl+Alt+C shortcut to insert comment is visible in menu but doesn't work for me in Windows, works just in Linux (implementation error from when it was added in LO 3.5);
3. Ctrl+Alt+C shortcut to also edit comment abandoned (from this bug).

Bug 84153 was confirmed and fixed without UX i.e. taking all into account.
Regression and duplicates, high. Synerzip not active, no dev in CC. 

IMO, solution would be:
- set Insert-Comment back as also available to edit comment
- fix Ctrl+Alt+C in Windows (if really doesn't work just)
- add Ctrl+Alt+C to edit comment
Comment 14 Heiko Tietze 2020-03-11 10:05:48 UTC
(In reply to Timur from comment #13)
> 1. Insert-Comment is not available in menu if comment exists, so Edit not
> possible from menu (regression from Bug 84153 in LO 5.0);

6.3.5 allows to insert a comment and edit per context menu. The main menu has Insert > Comment but no Edit > Comment.

> 2. Ctrl+Alt+C shortcut to insert comment is visible in menu but doesn't work
> for me in Windows, works just in Linux (implementation error from when it
> was added in LO 3.5);

No idea about this, Linux here.

> 3. Ctrl+Alt+C shortcut to also edit comment abandoned (from this bug).
> Bug 84153 was confirmed and fixed without UX i.e. taking all into account.
> Regression and duplicates, high. Synerzip not active, no dev in CC. 

I'm reading bug 84153 as if the shortcut should work as either insert or edit depending on whether the cell has a comment, but it doesn't. Was it really possible to overload a shortcut before 5.2? When I assign ctrl+alt+c to "edit comment" it's not available for "insert comment". Would be nice, though no idea about a sane customization.

Muhammet, Maxim: What's your opinion?
Comment 15 Maxim Monastirsky 2020-03-12 01:02:11 UTC
(In reply to Timur from comment #13)
> 1. Insert-Comment is not available in menu if comment exists, so Edit not
> possible from menu (regression from Bug 84153 in LO 5.0);
There is Sheet > Cell Comments > Edit Comment.

> 2. Ctrl+Alt+C shortcut to insert comment is visible in menu but doesn't work
> for me in Windows
Maybe related to Bug 118269 (was fixed only for Hungarian)?
Comment 16 Maxim Monastirsky 2020-03-12 01:06:24 UTC
(In reply to Yousuf Philips (jay) (retired) from comment #9)
> The same shortcut should work for both inserting and editing comments, as it
> used to in 4.4 and below, and as it does in writer, so users dont have to
> learn a new shortcut.
> 
> https://gerrit.libreoffice.org/#/c/31449/
^^^ Actually this was a brilliant idea: We can show the same shortcut for two different commands, if only we define the first one in a global scope, and the second one in a module-specific scope (Calc in our case). It is true that the module-specific command is the one that will be always executed by pressing the shortcut, but this isn't a problem here, as both commands share the same execution code. The only remaining problem is that the edit command is disabled when a cell doesn't have a comment, and so can't be executed. But fortunately this can be solved by some sdi magic, so the edit command remains visually disabled, but still can be executed via the api (and thus by a keyboard shortcut).

An updated attempt is in gerrit:

https://gerrit.libreoffice.org/c/core/+/90354
Comment 17 Commit Notification 2020-03-12 07:35:11 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/02cac3ee70760234db0fad44cb9095dfccc538a1

tdf#95854 Same shortcut for insert and edit comment

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 18 Heiko Tietze 2020-03-12 07:35:50 UTC
(In reply to Maxim Monastirsky from comment #16)
> https://gerrit.libreoffice.org/c/core/+/90354

(In reply to Maxim Monastirsky from comment #15)
> There is Sheet > Cell Comments > Edit Comment.


=> fixed
Comment 19 Daniel 2020-03-12 08:26:53 UTC
Great that this is finally fixed! Thank you @Maxim!
Comment 20 Timur 2020-03-12 10:21:20 UTC
(In reply to Maxim Monastirsky from comment #15)
> (In reply to Timur from comment #13)
> > 1. Insert-Comment is not available in menu if comment exists, so Edit not
> > possible from menu (regression from Bug 84153 in LO 5.0);
> There is Sheet > Cell Comments > Edit Comment.
> 
> > 2. Ctrl+Alt+C shortcut to insert comment is visible in menu but doesn't work
> > for me in Windows
> Maybe related to Bug 118269 (was fixed only for Hungarian)?

Thanks for pointing out, there were also listed other bugs, my bad I didn't search. 

I opened a documentation bug 131305 to improve help for edit and to say that  Ctrl+Alt+C may not work on some Windows systems. 
I don't know why it doesn't work on my physical Windows in any LO and at the same time works in virtual machine on the same system. 
Since I don't know the cause, I will not open a bug.
Comment 21 BogdanB 2020-05-10 19:13:52 UTC
Great! I didn't know how easy easy with shortcut to insert and also to edit an existing comment! Ctrl+Alt+C 

Now it's working!

Verified on
Version: 7.0.0.0.alpha1
Build ID: 6a03b2a54143a9bc0c6d4c7f1...
CPU threads: 4; OS: Linux 5.4; UI render: default; VCL: gtk3; 
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 22 Nadya Kaur 2021-01-28 12:25:09 UTC Comment hidden (spam)
Comment 23 claude84 2022-04-21 04:34:32 UTC Comment hidden (spam)