tdf#95854 Same shortcut for insert and edit comment

But at the same time keep them as two separate commands for tdf#84153.

The idea is to define a global shortcut for the insert command (it's
the same shortcut in all modules anyway), and then override it as a
Calc-specific shortcut for the edit command. As a result, both menu
(or context menu) items will show the same shortcut, but what will be
actually executed by the shortcut is the edit command (as module
specific commands have higher priority). This would work, as both
commands share the same execution code. The only problem is that the
edit command is disabled when the cell doesn't have a comment, and so
can't be executed. Solve that by setting the FastCall sdi property on
it (and reuse this general solution for the lok case too).

Change-Id: I8a7280edb2aad7016ca31c63ca778b98fef85365